[package]
name = "rust-jwt-example"
version = "0.1.0"
authors = ["lansheng228 <lansheng228@gmail.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "=7.2.0"
tokio = { version = "1.22.0", features = ["macros", "sync", "rt-multi-thread", "time"] }
warp = "0.3.3"
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
chrono = "0.4.23"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
